# SpeechBridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  deploy-local.sh  package-lock.json  package.json  vercel.json
backend/: .env.example  Untitled  agent.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  main.py
backend/tests/: TEST_PLAN.md  test_dysarthria.py
backend/tests/dysarthria/: load_dysarthria.py  test_dysarthria.py
backend/util/: clone_voice.py  convex_http.py  logger.py  summarise.py
convex/: schema.ts  users.ts
convex/_generated/: api.d.ts
frontend/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
frontend/convex/: auth.config.ts  profile_versions.ts  schema.ts  sessions.ts  telegram_users.ts  users.ts
frontend/convex/_generated/: api.d.ts
frontend/src/: App.css  App.jsx  AuthenticatedApp.jsx  BrandLogo.jsx  Dashboard.jsx  LandingPage.jsx  OnboardingFlow.jsx  SessionSidebar.jsx  SignInPage.jsx  SpeechSession.jsx  VoiceCloneRecorder.jsx  clerkSignInTheme.js  clerkUserButtonTheme.js  index.css  landing.css  main.jsx
frontend/src/hooks/: useAudioRecorder.js  useMediaQuery.js
frontend/src/onboarding/: onboardingData.js
telegram-mtproto-voice/: .env.example  .gitignore  README.md  bot_listener.py  consent_template.txt  convex_telegram.py  requirements.txt  start_services.sh  voice_listener.py
