[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.39.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-google-genai>=4.2.1",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-levenshtein>=0.27.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.42.0",
]
